--- a/index.html
+++ b/index.html
@@ -1,25 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Purple Ocean</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Purple Ocean – Coming Soon</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
-      background-color: #1f0035;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(to bottom right, #1f0035, #3a0f57);
       color: white;
-      font-family: sans-serif;
+      font-family: 'Inter', sans-serif;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
       text-align: center;
-      padding: 50px;
     }
+
     h1 {
-      font-size: 48px;
-      margin-bottom: 20px;
+      font-size: 3em;
+      margin-bottom: 0.2em;
+    }
+
+    p {
+      font-size: 1.2em;
+      margin-bottom: 1em;
+    }
+
+    .contact {
+      margin-top: 2em;
+      font-size: 1em;
+      background-color: rgba(255, 255, 255, 0.1);
+      padding: 10px 20px;
+      border-radius: 8px;
+    }
+
+    .contact a {
+      color: #ffd6ff;
+      text-decoration: none;
+    }
+
+    .contact a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
-  <h1>Welcome to Purple Ocean 🌊</h1>
-  <p>This is a simple landing page hosted for free!</p>
+  <h1>🌊 Purple Ocean</h1>
+  <p>We're working on something amazing.</p>
+  <p><strong>Coming Soon.</strong></p>
+  <div class="contact">
+    📧 Contact us: <a href="mailto:info@purpleocean.sa">info@purpleocean.sa</a>
+  </div>
 </body>
 </html>
