--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       padding: 0;
-      background: linear-gradient(to bottom right, #1f0035, #3a0f57);
+      background-color: #400080;
       color: white;
       font-family: 'Inter', sans-serif;
       display: flex;
