--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </style>
 </head>
 <body>
-  <h1>🌊 Purple Ocean</h1>
+  <h1>Purple Ocean</h1>
   <p>We're working on something amazing.</p>
   <p><strong>Coming Soon.</strong></p>
   <div class="contact">
