--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </head>
 <body>
   
-<img src="logo.svg" alt="Purple Ocean Logo" style="max-width: 150px; margin-bottom: 20px;">
+<img src="logo.svg" alt="Purple Ocean Logo" style="max-width: 150px; margin-bottom: 20px; opacity: 0.8;">
 
 
 
