--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     }
 
     .contact a {
-      color: #ffd6ff;
+      color: #1c0e1c;
       text-decoration: none;
     }
 
@@ -50,7 +50,7 @@
 </head>
 <body>
   
-<img src="Logo.png" alt="Purple Ocean Logo" style="max-width: 150px; margin-bottom: 20px;">
+<img src="Logo.png" alt="Purple Ocean Logo" style="max-width: 250px; margin-bottom: 20px;">
 
 
 
