--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       padding: 0;
-      background-color: #400080;
+      background-color: #1c0e1c;
       color: white;
       font-family: 'Inter', sans-serif;
       display: flex;
@@ -52,10 +52,6 @@
   
 <img src="Logo.png" alt="Purple Ocean Logo" style="max-width: 250px; margin-bottom: 20px;">
 
-
-
-
-  <h1>Purple Ocean</h1>
   <p>We're working on something amazing.</p>
   <p><strong>Coming Soon.</strong></p>
   <div class="contact">
