--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       }
     }
 
-    /* HERO SECTION WITH FULL WIDTH */
+    /* HERO SECTION */
     .hero {
       padding: 24px 22px;
       background-color: var(--card-bg);
@@ -216,15 +216,14 @@
           <div class="brand-tagline">Smart solutions for smoother operations</div>
         </div>
       </div>
-      <nav>
-        <a href="#about">About</a>
-      </nav>
+
+      <!-- About removed -->
+      <nav></nav>
     </header>
 
-    <!-- HERO ONLY -->
     <main>
-      <section class="hero" id="about">
-        <div class="hero-pill">Business & Operations</div>
+      <section class="hero">
+        <div class="hero-pill">Consulting & Solutions</div>
 
         <h1 class="hero-title">
           Purple Ocean streamlines operations and grows through smart solutions.
@@ -242,7 +241,7 @@
 
         <div class="hero-actions">
           <a class="btn-primary" href="mailto:info@purpleocean.sa?subject=Inquiry%20from%20website">
-            Contact us by email
+            Contact Us
           </a>
         </div>
       </section>
