--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
   <footer>
     <div class="footer-inner">
       <span>© <span id="year"></span> <strong>Purple Ocean</strong>. All rights reserved.</span>
-      <span>Based in Jeddah, Saudi Arabia.</span>
+      <span>Based in Saudi Arabia.</span>
     </div>
   </footer>
 
