--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@
 
       <div class="heroInner">
         <div class="heroMain">
-          <div class="pill"><span class="dot" aria-hidden="true"></span> Consulting</div>
+        
 
           <h1>Growth shouldn’t <span class="grad">feel chaotic.</span></h1>
 
@@ -780,7 +780,7 @@
 
             <li><span class="tick" aria-hidden="true">
               <svg viewBox="0 0 24 24" fill="none"><path d="M7 12l3 3 7-7" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
-            </span><span>Less noise, cleaner execution, and stronger consistency across channels</span></li>
+            </span><span>Less noise, cleaner execution</span></li>
           </ul>
 
           <div class="actions">
@@ -819,7 +819,7 @@
                   <path d="M20 7v6h-6" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
                 </svg>
               </div>
-              <div><b>Clarity on priorities</b><span>What to focus on, what to stop, and what to test next.</span></div>
+              <div><b>Clarity on priorities</b><span>What to focus on, and what to test next.</span></div>
             </div>
 
             <div class="miniItem">
@@ -848,7 +848,7 @@
     </section>
 
     <section id="about" class="section reveal" aria-label="About">
-      <div class="head"><div><h2>About</h2><p>Professional, business-first support — without the fluff.</p></div></div>
+      <div class="head"><div><h2>About</h2><p></p></div></div>
       <div class="grid">
         <div class="card" data-tilt><div class="label"><i></i> Direction</div><h3>Clearer decisions</h3><p>We help leadership teams reduce complexity and choose a focused path forward.</p></div>
         <div class="card" data-tilt><div class="label alt"><i></i> Standards</div><h3>Stronger execution</h3><p>We support consistent marketing execution that looks premium and performs.</p></div>
@@ -857,7 +857,7 @@
     </section>
 
     <section id="focus" class="section reveal" aria-label="Focus">
-      <div class="head"><div><h2>What we focus on</h2><p>General on purpose — centered on outcomes that compound.</p></div></div>
+      <div class="head"><div><h2>What we focus on</h2><p></p></div></div>
       <div class="grid">
         <div class="card" data-tilt><div class="label"><i></i> Clarity</div><h3>Make the message obvious</h3><p>We simplify what you do, who it’s for, and why it matters — so people understand you fast.</p></div>
         <div class="card" data-tilt><div class="label alt"><i></i> Analysis</div><h3>See what to improve next</h3><p>We review performance, customer journey, and market signals to identify what to change.</p></div>
@@ -868,8 +868,8 @@
     <section id="how" class="section reveal" aria-label="How we work">
       <div class="head"><div><h2>How we work</h2><p>Simple, structured, measurable.</p></div></div>
       <div class="stepper">
-        <div class="step"><div class="num">01</div><div><b>Understand the business</b><span>We start with the business reality: goals, constraints, performance signals, and what success must look like.</span></div></div>
-        <div class="step"><div class="num">02</div><div><b>Reduce complexity to priorities</b><span>We compress everything into a few high-impact moves — clear direction, clear owners, and clear measurement.</span></div></div>
+        <div class="step"><div class="num">01</div><div><b>Understand the business</b><span>We start with the business reality: goals, performance signals, and what success must look like.</span></div></div>
+        <div class="step"><div class="num">02</div><div><b>Reduce complexity to priorities</b><span>We compress everything into a few high-impact moves — clear direction, and clear measurement.</span></div></div>
         <div class="step"><div class="num">03</div><div><b>Execute with consistency</b><span>Cleaner execution across channels, fewer distractions, and a steady rhythm of improvements.</span></div></div>
       </div>
     </section>
@@ -893,9 +893,9 @@
     <div class="foot">
       <div>
         <div style="color:var(--text); font-weight:800;">© <span id="year"></span> Purple Ocean</div>
-        <small>Based in Saudi Arabia • <a href="mailto:info@purpleocean.sa">info@purpleocean.sa</a></small>
+       
       </div>
-      <div><small style="opacity:0.9;">Better clarity. Better outcomes.</small></div>
+      <div><small style="opacity:0.9;">Based in Saudi Arabia.</small></div>
     </div>
   </footer>
 
