--- a/index.html
+++ b/index.html
@@ -1144,25 +1144,25 @@
         chip_execution: `<i aria-hidden="true"></i> تنفيذ`,
 
         b1: "رسالة واضحة وتموضع يفهمه الناس بسرعة",
-        b2: "اتجاه تسويقي مبني على البيانات وما تعكسه فعليًا",
-        b3: "ضوضاء أقل وتنفيذ أنظف",
+        b2: "توجية مبني على البيانات وما تعكسه فعليًا",
+        b3: "ضوضاء أقل وتنفيذ مرن",
 
         btn_contact: "تواصل معنا",
         btn_copy: "نسخ البريد",
 
         m1t: "وضوح في الأولويات",
         m1s: "ما الذي نركز عليه، وما الذي نختبره بعدها.",
-        m2t: "اتجاه مبني على الأدلة",
+        m2t: "توجية مبني على الأدلة",
         m2s: "قرارات مبنية على مؤشرات الأداء وسلوك العملاء.",
-        m3t: "تنفيذ أنظف",
-        m3s: "هيكل بسيط يحافظ على اتساق الفريق عبر القنوات.",
+        m3t: "تنفيذ مرن",
+        m3s: "هيكل بسيط يحافظ على اتساق الفريق.",
 
         about_title: "من نحن",
         about_sub: "دعم احترافي قائم على فهم الأعمال — بدون مبالغة.",
 
         a_label1: "اتجاه",
         a_h1: "قرارات أوضح",
-        a_p1: "نساعد فرق القيادة على تقليل التعقيد واختيار مسار مركّز.",
+        a_p1: "نساعد فرق القيادة على تقليل التعقيد واختيار مسار واضح.",
         a_label2: "معايير",
         a_h2: "تنفيذ أقوى",
         a_p2: "نساعد على تنفيذ تسويقي متسق بمظهر ممتاز ونتائج أفضل.",
@@ -1171,17 +1171,17 @@
         a_p3: "نبسّط سير العمل وتدفّق القرار لتتحرك الفرق أسرع وباحتكاك أقل.",
 
         focus_title: "تركيزنا",
-        focus_sub: "عام بشكل مقصود — لكنه مركز على نتائج تتراكم.",
+        focus_sub: "مركز على نتائج تتراكم.",
 
         f_label1: "وضوح",
         f_h1: "خل الرسالة واضحة",
-        f_p1: "نبسّط ما تقدم، ولمن، ولماذا يهم — ليتم فهمك بسرعة.",
+        f_p1: "نبسّط ما تقدم، ولمن، ولماذا — ليتم فهمك بسرعة.",
         f_label2: "تحليل",
         f_h2: "اعرف التالي للتحسين",
         f_p2: "نراجع الأداء ورحلة العميل وإشارات السوق لتحديد ما يجب تغييره.",
         f_label3: "اتجاه تسويقي",
         f_h3: "حركات أقل… أقوى",
-        f_p3: "نحوّل الرؤى إلى أولويات: ماذا نركز عليه، ماذا نوقف، وماذا نختبر.",
+        f_p3: "نحوّل الرؤى إلى أولويات: ماذا نركز عليه، وماذا نختبر.",
 
         how_title: "كيف نعمل",
         how_sub: "ببساطة. بنظام. وبقياس.",
@@ -1191,12 +1191,12 @@
         s2t: "نحوّل التعقيد إلى أولويات",
         s2s: "نختصر كل شيء إلى خطوات عالية الأثر: اتجاه واضح وقياس واضح.",
         s3t: "تنفيذ متسق",
-        s3s: "تنفيذ أنظف عبر القنوات، تشتيت أقل، وتحسينات مستمرة.",
+        s3s: "تنفيذ مرن، تشتيت أقل، وتحسينات مستمرة.",
 
         cta_title: "تبغى وضوح في الخطوة الجاية؟",
         cta_sub: "أرسل نبذة قصيرة — ونرد عليك بخطوات واضحة للتحرك.",
 
-        footer_line: "مقرنا في المملكة العربية السعودية.",
+        footer_line: " المملكة العربية السعودية.",
         toast_copied: "تم النسخ."
       }
     };
