--- a/index.html
+++ b/index.html
@@ -1136,7 +1136,7 @@
         nav_how: "كيف نعمل",
         nav_contact: "تواصل",
 
-        hero_title: `النمو لا يجب أن <span class="grad">يكون فوضويًا.</span>`,
+        hero_title: `نمُوّك <span class="grad">يستحق وضوحًا، لا فوضى.</span>`,
         hero_sub: "Purple Ocean تساعد الجهات على الوصول للوضوح، واتخاذ قرارات أذكى، وتحسين أداء التسويق عبر تحليل أعمال وتسويق دقيق.",
 
         chip_clarity: `<i aria-hidden="true"></i> وضوح`,
