--- a/index.html
+++ b/index.html
@@ -1140,7 +1140,7 @@
         hero_sub: "Purple Ocean تساعد الجهات على الوصول للوضوح، واتخاذ قرارات أذكى، وتحسين أداء التسويق عبر تحليل أعمال وتسويق دقيق.",
 
         chip_clarity: `<i aria-hidden="true"></i> وضوح`,
-        chip_direction: `<i aria-hidden="true"></i> اتجاه`,
+        chip_direction: `<i aria-hidden="true"></i> توجية`,
         chip_execution: `<i aria-hidden="true"></i> تنفيذ`,
 
         b1: "رسالة واضحة وتموضع يفهمه الناس بسرعة",
@@ -1160,7 +1160,7 @@
         about_title: "من نحن",
         about_sub: "دعم احترافي قائم على فهم الأعمال — بدون مبالغة.",
 
-        a_label1: "اتجاه",
+        a_label1: "توجية",
         a_h1: "قرارات أوضح",
         a_p1: "نساعد فرق القيادة على تقليل التعقيد واختيار مسار واضح.",
         a_label2: "معايير",
@@ -1179,7 +1179,7 @@
         f_label2: "تحليل",
         f_h2: "اعرف التالي للتحسين",
         f_p2: "نراجع الأداء ورحلة العميل وإشارات السوق لتحديد ما يجب تغييره.",
-        f_label3: "اتجاه تسويقي",
+        f_label3: "توجية تسويقي",
         f_h3: "حركات أقل… أقوى",
         f_p3: "نحوّل الرؤى إلى أولويات: ماذا نركز عليه، وماذا نختبر.",
 
@@ -1189,7 +1189,7 @@
         s1t: "نفهم الواقع",
         s1s: "نبدأ من واقع العمل: الأهداف، مؤشرات الأداء، وكيف يبدو النجاح فعليًا.",
         s2t: "نحوّل التعقيد إلى أولويات",
-        s2s: "نختصر كل شيء إلى خطوات عالية الأثر: اتجاه واضح وقياس واضح.",
+        s2s: "نختصر كل شيء إلى خطوات عالية الأثر: توجية واضح وقياس واضح.",
         s3t: "تنفيذ متسق",
         s3s: "تنفيذ مرن، تشتيت أقل، وتحسينات مستمرة.",
 
