--- a/index.html
+++ b/index.html
@@ -1137,7 +1137,7 @@
         nav_contact: "تواصل",
 
         hero_title: `نمُوّك <span class="grad">يستحق وضوحًا، لا فوضى.</span>`,
-        hero_sub: "Purple Ocean تساعد الجهات على الوصول للوضوح، واتخاذ قرارات أذكى، وتحسين أداء التسويق عبر تحليل أعمال وتسويق دقيق.",
+        hero_sub: "برپل أوشن تساعد الجهات على الوصول للوضوح، واتخاذ قرارات أذكى، وتحسين أداء التسويق عبر تحليل الأعمال.",
 
         chip_clarity: `<i aria-hidden="true"></i> وضوح`,
         chip_direction: `<i aria-hidden="true"></i> توجية`,
@@ -1180,7 +1180,7 @@
         f_h2: "اعرف التالي للتحسين",
         f_p2: "نراجع الأداء ورحلة العميل وإشارات السوق لتحديد ما يجب تغييره.",
         f_label3: "توجية تسويقي",
-        f_h3: "حركات أقل… أقوى",
+        f_h3: "خطوات اقل أثر اكبر",
         f_p3: "نحوّل الرؤى إلى أولويات: ماذا نركز عليه، وماذا نختبر.",
 
         how_title: "كيف نعمل",
