--- a/index.html
+++ b/index.html
@@ -1136,8 +1136,8 @@
         nav_how: "كيف نعمل",
         nav_contact: "تواصل",
 
-        hero_title: `نمُوّك <span class="grad">يستحق وضوحًا، لا فوضى.</span>`,
-        hero_sub: "برپل أوشن تساعد الجهات على الوصول للوضوح، واتخاذ قرارات أذكى، وتحسين أداء التسويق عبر تحليل الأعمال.",
+        hero_title: `<span class="grad">الوُضوحُ أَساسُ النُّموِّ.</span>`,
+        hero_sub: "برپل أوشن شريك استراتيجي يساعد الجهات على تحقيق وضوح أفضل، واتخاذ قرارات مدروسة، وتحسين أداء التسويق من خلال تحليل الأعمال والرؤى المبنية على البيانات.",
 
         chip_clarity: `<i aria-hidden="true"></i> وضوح`,
         chip_direction: `<i aria-hidden="true"></i> توجية`,
