--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
 
             <li><span class="tick" aria-hidden="true">
               <svg viewBox="0 0 24 24" fill="none"><path d="M7 12l3 3 7-7" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
-            </span><span data-i18n="b2">Insight-driven marketing direction based on what the data is actually saying</span></li>
+            </span><span data-i18n="b2">Insight-driven direction based on what the data is actually saying</span></li>
 
             <li><span class="tick" aria-hidden="true">
               <svg viewBox="0 0 24 24" fill="none"><path d="M7 12l3 3 7-7" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
@@ -1136,7 +1136,7 @@
         nav_how: "كيف نعمل",
         nav_contact: "تواصل",
 
-        hero_title: `<span class="grad">الوُضوحُ أَساسُ النُّموِّ.</span>`,
+        hero_title: `<span class="grad">الوضوح أَساسُ النُّموِّ.</span>`,
         hero_sub: "برپل أوشن شريك استراتيجي يساعد الجهات على تحقيق وضوح أفضل، واتخاذ قرارات مدروسة، وتحسين أداء التسويق من خلال تحليل الأعمال والرؤى المبنية على البيانات.",
 
         chip_clarity: `<i aria-hidden="true"></i> وضوح`,
